<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/deleteWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="51dp" />

    <Button
        android:id="@+id/cancel_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_margin="20dp"
        android:onClick="onDeleteCancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/delete_weight"
        app:layout_constraintTop_toBottomOf="@id/deleteWeight"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="219dp" />

    <Button
        android:id="@+id/delete_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="onDeleteWeight"
        android:layout_margin="20dp"
        app:layout_constraintLeft_toRightOf="@id/cancel_action"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteWeight"
        app:layout_constraintBaseline_toBaselineOf="@id/cancel_action"
        tools:layout_editor_absoluteX="272dp"
        tools:layout_editor_absoluteY="223dp" />
</androidx.constraintlayout.widget.ConstraintLayout>