<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/userNameText"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/form_register_account"
        android:textSize="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerUsernameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_username"
        app:placeholderText="Test"
        android:maxWidth="@dimen/custom_max_width"
        android:minWidth="@dimen/custom_min_width"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/userNameText"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="91dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerPasswordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/custom_min_width"
        android:maxWidth="@dimen/custom_max_width"
        android:hint="@string/form_password"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/registerUsernameLayout"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:endIconMode="password_toggle"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="194dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/setGoalLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/custom_min_width"
        android:maxWidth="@dimen/custom_max_width"
        android:hint="@string/form_goal"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/registerPasswordLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="194dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerGoal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_register"
        android:onClick="onRegisterClick"
        app:layout_constraintTop_toBottomOf="@id/setGoalDate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="457dp" />

    <EditText
        android:id="@+id/setGoalDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:layout_margin="10dp"
        android:hint="@string/registerDate"
        app:layout_constraintTop_toBottomOf="@id/setGoalLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="291dp" />

</androidx.constraintlayout.widget.ConstraintLayout>