<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineH"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineV"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>
    <EditText
        android:id="@+id/editTextLoginUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/form_username"
        app:layout_constraintBottom_toTopOf="@id/editTextLoginPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/form_password"
        android:fontFamily="sans-serif"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineH"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="303dp" />

    <Button
        android:id="@+id/formButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_login"
        android:onClick="onSignInClicked"
        app:layout_constraintTop_toBottomOf="@id/guidelineH"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="395dp" />

</androidx.constraintlayout.widget.ConstraintLayout>